--- a/Manifests/ManagedPreferencesApplications/com.google.Chrome.plist
+++ b/Manifests/ManagedPreferencesApplications/com.google.Chrome.plist
@@ -281,6 +281,7 @@ During a profile replacement, the system updates payloads with the same 'Payload
 				</array>
 				<key>Misc.</key>
 				<array>
+					<string>GoogleSearchSidePanelEnabled</string>
 					<string>FileOrDirectoryPickerWithoutGestureAllowedForOrigins</string>
 					<string>EnterpriseProfileCreationKeepBrowsingData</string>
 					<string>EncryptedClientHelloEnabled</string>
@@ -3398,6 +3399,23 @@ For more information on Internet Explorer's SiteList policy: https://docs.micros
 			<string>string</string>
 			<key>pfm_value_placeholder</key>
 			<string>http://example.com/sitelist.xml</string>
+		</dict>
+		<dict>
+			<key>pfm_app_min</key>
+			<string>115</string>
+			<key>pfm_description</key>
+			<string>This policy will allow Google Search Side Panel.</string>
+			<key>pfm_description_reference</key>
+			<string> If set to Enabled or not set, Google Search Side Panel is allowed on all web pages.If set to Disabled, Google Search Side Panel is not available on any webpage.
+			</string>
+			<key>pfm_documentation_url</key>
+			<string>https://chromeenterprise.google/policies/#GoogleSearchSidePanelEnabled</string>
+			<key>pfm_name</key>
+			<string>GoogleSearchSidePanelEnabled</string>
+			<key>pfm_title</key>
+			<string>Enable Google Search Side Panel</string>
+			<key>pfm_type</key>
+			<string>boolean</string>
 		</dict>
 		<dict>
 			<key>pfm_app_min</key>
