--- a/Manifests/ManagedPreferencesApplications/com.google.Chrome.plist
+++ b/Manifests/ManagedPreferencesApplications/com.google.Chrome.plist
@@ -281,6 +281,7 @@ During a profile replacement, the system updates payloads with the same 'Payload
 				</array>
 				<key>Misc.</key>
 				<array>
+					<string>HttpsUpgradesEnabled</string>
 					<string>GoogleSearchSidePanelEnabled</string>
 					<string>FileOrDirectoryPickerWithoutGestureAllowedForOrigins</string>
 					<string>EnterpriseProfileCreationKeepBrowsingData</string>
@@ -3399,6 +3400,23 @@ For more information on Internet Explorer's SiteList policy: https://docs.micros
 			<string>string</string>
 			<key>pfm_value_placeholder</key>
 			<string>http://example.com/sitelist.xml</string>
+		</dict>
+		<dict>
+			<key>pfm_app_min</key>
+			<string>112</string>
+			<key>pfm_description</key>
+			<string>This policy will allow automatic HTTPS upgrades.</string>
+			<key>pfm_description_reference</key>
+			<string>Google Chrome attempts to upgrade some navigations from HTTP to HTTPS, when possible. This policy can be used to disable this behavior. If set to "true" or left unset, this feature will be enabled by default. The separate HttpAllowlist policy can be used to exempt specific hostnames or hostname patterns from being upgraded to HTTPS by this feature.
+			</string>
+			<key>pfm_documentation_url</key>
+			<string>https://chromeenterprise.google/policies/#HttpsUpgradesEnabled</string>
+			<key>pfm_name</key>
+			<string>HttpsUpgradesEnabled</string>
+			<key>pfm_title</key>
+			<string>Enable automatic HTTPS upgrades</string>
+			<key>pfm_type</key>
+			<string>boolean</string>
 		</dict>
 		<dict>
 			<key>pfm_app_min</key>
