--- a/Manifests/ManagedPreferencesApplications/com.microsoft.wdav.plist
+++ b/Manifests/ManagedPreferencesApplications/com.microsoft.wdav.plist
@@ -11,7 +11,7 @@
 	<key>pfm_format_version</key>
 	<integer>1</integer>
 	<key>pfm_last_modified</key>
-	<date>2024-09-18T17:57:55Z</date>
+	<date>2025-12-13T20:41:02Z</date>
 	<key>pfm_platforms</key>
 	<array>
 		<string>macOS</string>
@@ -131,7 +131,51 @@ During a profile replacement, the system updates payloads with the same 'Payload
 			<array>
 				<dict>
 					<key>pfm_app_min</key>
+					<string>101.24042.0002</string>
+					<key>pfm_default</key>
+					<string>enabled</string>
+					<key>pfm_description</key>
+					<string>Determines whether behavior monitoring and blocking capability is enabled on the device or not.</string>
+					<key>pfm_documentation_url</key>
+					<string>https://learn.microsoft.com/en-us/defender-endpoint/mac-preferences#enabledisable-behavior-monitoring</string>
+					<key>pfm_name</key>
+					<string>behaviorMonitoring</string>
+					<key>pfm_range_list</key>
+					<array>
+						<string>disabled</string>
+						<string>enabled</string>
+					</array>
+					<key>pfm_range_list_titles</key>
+					<array>
+						<string>Disabled</string>
+						<string>Enabled</string>
+					</array>
+					<key>pfm_title</key>
+					<string>Behavior Monitoring</string>
+					<key>pfm_type</key>
+					<string>string</string>
+				</dict>
+				<dict>
+					<key>pfm_app_min</key>
 					<string>101.10.72</string>
+					<key>pfm_conditionals</key>
+					<array>
+						<dict>
+							<key>pfm_require</key>
+							<string>always</string>
+							<key>pfm_target_conditions</key>
+							<array>
+								<dict>
+									<key>pfm_range_list</key>
+									<array>
+										<string>enabled</string>
+									</array>
+									<key>pfm_target</key>
+									<string>antivirusEngine.behaviorMonitoring</string>
+								</dict>
+							</array>
+						</dict>
+					</array>
 					<key>pfm_default</key>
 					<string>real_time</string>
 					<key>pfm_description</key>
@@ -1719,6 +1763,6 @@ The execute permission only refers to execution of Mach-O binaries. It does not 
 	<key>pfm_unique</key>
 	<true/>
 	<key>pfm_version</key>
-	<integer>3</integer>
+	<integer>4</integer>
 </dict>
 </plist>
