--- a/Manifests/ManagedPreferencesApplications/net.glencode.Particulars.plist
+++ b/Manifests/ManagedPreferencesApplications/net.glencode.Particulars.plist
@@ -11,7 +11,7 @@
 	<key>pfm_format_version</key>
 	<integer>1</integer>
 	<key>pfm_last_modified</key>
-	<date>2025-03-14T13:00:00Z</date>
+	<date>2025-12-17T04:00:00Z</date>
 	<key>pfm_platforms</key>
 	<array>
 		<string>macOS</string>
@@ -197,6 +197,8 @@ During a profile replacement, the system updates payloads with the same 'Payload
 		<dict>
 			<key>pfm_app_min</key>
 			<string>30</string>
+			<key>pfm_default</key>
+			<integer>6</integer>
 			<key>pfm_description</key>
 			<string>Sets the relative position of desktop system information.</string>
 			<key>pfm_documentation_url</key>
@@ -658,6 +660,20 @@ During a profile replacement, the system updates payloads with the same 'Payload
 		</dict>
 		<dict>
 			<key>pfm_app_min</key>
+			<string>50</string>
+			<key>pfm_description</key>
+			<string>This modifies the format of the date and time for the Boot Time particular. Follows a Unicode standard https://www.unicode.org/reports/tr35/tr35-31/tr35-dates.html#Date_Format_Patterns</string>
+			<key>pfm_documentation_url</key>
+			<string>https://particulars.app/_help/particularshelp/Advanced.html#dateFormat</string>
+			<key>pfm_name</key>
+			<string>dateFormat</string>
+			<key>pfm_title</key>
+			<string>Date Format</string>
+			<key>pfm_type</key>
+			<string>string</string>
+		</dict>
+		<dict>
+			<key>pfm_app_min</key>
 			<string>64</string>
 			<key>pfm_default</key>
 			<false/>
@@ -815,6 +831,6 @@ During a profile replacement, the system updates payloads with the same 'Payload
 	<key>pfm_unique</key>
 	<true/>
 	<key>pfm_version</key>
-	<integer>5</integer>
+	<integer>6</integer>
 </dict>
 </plist>
