--- a/Manifests/ManagedPreferencesApplications/com.brave.Browser.plist
+++ b/Manifests/ManagedPreferencesApplications/com.brave.Browser.plist
@@ -15,7 +15,7 @@
 	<key>pfm_interaction</key>
 	<string>combined</string>
 	<key>pfm_last_modified</key>
-	<date>2025-01-15T11:02:30Z</date>
+	<date>2025-12-13T20:54:35Z</date>
 	<key>pfm_platforms</key>
 	<array>
 		<string>macOS</string>
@@ -5169,13 +5169,15 @@ See https://developers.google.com/safe-browsing for more info on Safe Browsing.<
 				<integer>1</integer>
 				<integer>2</integer>
 				<integer>3</integer>
+				<integer>4</integer>
 			</array>
 			<key>pfm_range_list_titles</key>
 			<array>
 				<string>No special restrictions</string>
-				<string>Block dangerous downloads</string>
-				<string>Block potentially dangerous downloads</string>
+				<string>Block malicious downloads and dangerous file types</string>
+				<string>Block malicious downloads, uncommon or unwanted downloads and dangerous file types</string>
 				<string>Block all downloads</string>
+				<string>Block malicious downloads</string>
 			</array>
 			<key>pfm_title</key>
 			<string>Download restrictions</string>
@@ -10386,6 +10388,6 @@ If the policy DeveloperToolsAvailability is set, the value of the policy Develop
 	<key>pfm_unique</key>
 	<true/>
 	<key>pfm_version</key>
-	<integer>16</integer>
+	<integer>17</integer>
 </dict>
 </plist>
