--- a/Manifests/ManagedPreferencesApplications/com.google.Chrome.plist
+++ b/Manifests/ManagedPreferencesApplications/com.google.Chrome.plist
@@ -15,7 +15,7 @@
 	<key>pfm_interaction</key>
 	<string>combined</string>
 	<key>pfm_last_modified</key>
-	<date>2025-10-14T00:00:00Z</date>
+	<date>2025-12-13T20:41:02Z</date>
 	<key>pfm_platforms</key>
 	<array>
 		<string>macOS</string>
@@ -5227,13 +5227,15 @@ See https://developers.google.com/safe-browsing for more info on Safe Browsing.<
 				<integer>1</integer>
 				<integer>2</integer>
 				<integer>3</integer>
+				<integer>4</integer>
 			</array>
 			<key>pfm_range_list_titles</key>
 			<array>
 				<string>No special restrictions</string>
-				<string>Block dangerous downloads</string>
-				<string>Block potentially dangerous downloads</string>
+				<string>Block malicious downloads and dangerous file types</string>
+				<string>Block malicious downloads, uncommon or unwanted downloads and dangerous file types</string>
 				<string>Block all downloads</string>
+				<string>Block malicious downloads</string>
 			</array>
 			<key>pfm_title</key>
 			<string>Download restrictions</string>
@@ -10226,6 +10228,6 @@ If the policy DeveloperToolsAvailability is set, the value of the policy Develop
 	<key>pfm_unique</key>
 	<true/>
 	<key>pfm_version</key>
-	<integer>17</integer>
+	<integer>18</integer>
 </dict>
 </plist>
