--- a/Manifests/ManagedPreferencesApplications/org.mozilla.firefox.plist
+++ b/Manifests/ManagedPreferencesApplications/org.mozilla.firefox.plist
@@ -20,7 +20,7 @@
 	<key>pfm_interaction</key>
 	<string>undefined</string>
 	<key>pfm_last_modified</key>
-	<date>2025-12-30T12:58:24Z</date>
+	<date>2026-01-06T08:59:08Z</date>
 	<key>pfm_macos_min</key>
 	<string>10.12</string>
 	<key>pfm_platforms</key>
@@ -3254,7 +3254,7 @@ The configuration for each extension is another dictionary that can contain the 
 				</dict>
 				<dict>
 					<key>pfm_default</key>
-					<true/>
+					<false/>
 					<key>pfm_description</key>
 					<string>If this preference is enabled, Proxy preferences cannot be changed.</string>
 					<key>pfm_description_reference</key>
