--- a/Manifests/ManagedPreferencesApplications/com.jamf.setupmanager.plist
+++ b/Manifests/ManagedPreferencesApplications/com.jamf.setupmanager.plist
@@ -13,7 +13,7 @@
 	<key>pfm_format_version</key>
 	<integer>1</integer>
 	<key>pfm_last_modified</key>
-	<date>2025-12-06T03:00:00Z</date>
+	<date>2026-02-04T16:00:00Z</date>
 	<key>pfm_platforms</key>
 	<array>
 		<string>macOS</string>
@@ -161,7 +161,6 @@ A profile can consist of payloads with different version numbers. For example, c
 					<string>enrollmentActions</string>
 					<string>finishedScript</string>
 					<string>finishedTrigger</string>
-					<string>finishedMessage</string>
 				</array>
 				<key>General</key>
 				<array>
@@ -179,6 +178,8 @@ A profile can consist of payloads with different version numbers. For example, c
 					<string>computerNameTemplate</string>
 					<string>hideActionLabels</string>
 					<string>actionOutputLogging</string>
+					<string>finishedMessage</string>
+					<string>startingMessage</string>
 					<string>PLEASE_DO_NOT_TRACK</string>
 				</array>
 				<key>Help</key>
@@ -538,6 +539,36 @@ A profile can consist of payloads with different version numbers. For example, c
 			</array>
 			<key>pfm_title</key>
 			<string>Action Output Logging</string>
+			<key>pfm_type</key>
+			<string>string</string>
+		</dict>
+		<dict>
+			<key>pfm_app_min</key>
+			<string>1.4</string>
+			<key>pfm_description</key>
+			<string>Custom message when Setup Manager workflow is complete. Supports Markdown and substitutions.</string>
+			<key>pfm_documentation_url</key>
+			<string>https://github.com/jamf/Setup-Manager/blob/main/ConfigurationProfile.md#finishedMessage</string>
+			<key>pfm_name</key>
+			<string>finishedMessage</string>
+			<key>pfm_title</key>
+			<string>Finished Message</string>
+			<key>pfm_type</key>
+			<string>string</string>
+		</dict>
+		<dict>
+			<key>pfm_app_min</key>
+			<string>1.4.3</string>
+			<key>pfm_default</key>
+			<string>Getting Ready…</string>
+			<key>pfm_description</key>
+			<string>Custom message shown while Setup Manager is "Getting Ready…" Supports Markdown and substitutions.</string>
+			<key>pfm_documentation_url</key>
+			<string>https://github.com/jamf/Setup-Manager/blob/main/ConfigurationProfile.md#startingMessage</string>
+			<key>pfm_name</key>
+			<string>startingMessage</string>
+			<key>pfm_title</key>
+			<string>Starting Message</string>
 			<key>pfm_type</key>
 			<string>string</string>
 		</dict>
@@ -2026,20 +2057,6 @@ A profile can consist of payloads with different version numbers. For example, c
 		</dict>
 		<dict>
 			<key>pfm_app_min</key>
-			<string>1.4</string>
-			<key>pfm_description</key>
-			<string>Custom message when Setup Manager workflow is complete. Supports Markdown and substitutions.</string>
-			<key>pfm_documentation_url</key>
-			<string>https://github.com/jamf/Setup-Manager/blob/main/ConfigurationProfile.md#finishedMessage</string>
-			<key>pfm_name</key>
-			<string>finishedMessage</string>
-			<key>pfm_title</key>
-			<string>Finished Message</string>
-			<key>pfm_type</key>
-			<string>string</string>
-		</dict>
-		<dict>
-			<key>pfm_app_min</key>
 			<string>1.2</string>
 			<key>pfm_name</key>
 			<string>webhooks</string>
@@ -2285,6 +2302,6 @@ A profile can consist of payloads with different version numbers. For example, c
 	<key>pfm_unique</key>
 	<true/>
 	<key>pfm_version</key>
-	<integer>6</integer>
+	<integer>7</integer>
 </dict>
 </plist>
