--- a/Manifests/ManagedPreferencesApplications/com.parallels.dektop.managedprefs.plist
+++ b/Manifests/ManagedPreferencesApplications/com.parallels.dektop.managedprefs.plist
@@ -11,7 +11,7 @@
 	<key>pfm_domain</key>
 	<string>com.parallels.desktop.managedprefs</string>
 	<key>pfm_format_version</key>
-	<integer>1</integer>
+	<integer>2</integer>
 	<key>pfm_icon</key>
 	<data>
 	iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAERl
@@ -121,7 +121,7 @@
 	<key>pfm_interaction</key>
 	<string>exclusive</string>
 	<key>pfm_last_modified</key>
-	<date>2025-08-04T08:25:08Z</date>
+	<date>2026-02-09T10:00:00Z</date>
 	<key>pfm_platforms</key>
 	<array>
 		<string>macOS</string>
@@ -302,6 +302,66 @@ During a profile replacement, the system updates payloads with the same `Payload
 			<string>string</string>
 			<key>pfm_value_placeholder</key>
 			<string>XXXXXX-XXXXXX-XXXXXX-XXXXXX-XXXXXX</string>
+		</dict>
+		<dict>
+			<key>pfm_description</key>
+			<string>Enter SSO dialogue header text:</string>
+			<key>pfm_documentation_url</key>
+			<string>https://docs.parallels.com/parallels-desktop-licensing-guide/managing-subscriptions-licences-and-seats/viewing-subscriptions-and-subscription-details</string>
+			<key>pfm_exclude</key>
+			<array>
+				<dict>
+					<key>pfm_target_conditions</key>
+					<array>
+						<dict>
+							<key>pfm_n_range_list</key>
+							<array>
+								<string>SSO</string>
+							</array>
+							<key>pfm_target</key>
+							<string>ActivationExperience</string>
+						</dict>
+					</array>
+				</dict>
+			</array>
+			<key>pfm_name</key>
+			<string>SsoEmailDialogHeaderText</string>
+			<key>pfm_title</key>
+			<string>SSO Dialogue Header Text (Optional)</string>
+			<key>pfm_type</key>
+			<string>string</string>
+			<key>pfm_value_placeholder</key>
+			<string>Enter your corporate email address</string>
+		</dict>
+		<dict>
+			<key>pfm_description</key>
+			<string>Enter SSO dialogue description text:</string>
+			<key>pfm_documentation_url</key>
+			<string>https://docs.parallels.com/parallels-desktop-licensing-guide/managing-subscriptions-licences-and-seats/viewing-subscriptions-and-subscription-details</string>
+			<key>pfm_exclude</key>
+			<array>
+				<dict>
+					<key>pfm_target_conditions</key>
+					<array>
+						<dict>
+							<key>pfm_n_range_list</key>
+							<array>
+								<string>SSO</string>
+							</array>
+							<key>pfm_target</key>
+							<string>ActivationExperience</string>
+						</dict>
+					</array>
+				</dict>
+			</array>
+			<key>pfm_name</key>
+			<string>SsoEmailDialogDescriptionText</string>
+			<key>pfm_title</key>
+			<string>SSO Dialogue Description Text (Optional)</string>
+			<key>pfm_type</key>
+			<string>string</string>
+			<key>pfm_value_placeholder</key>
+			<string>Your administrator has enabled you to activate this copy of Parallels Desktop with your corporate email address.</string>
 		</dict>
 	</array>
 	<key>pfm_targets</key>
