--- a/Manifests/ManagedPreferencesApplications/com.microsoft.autoupdate2.plist
+++ b/Manifests/ManagedPreferencesApplications/com.microsoft.autoupdate2.plist
@@ -13,7 +13,7 @@
 	<key>pfm_format_version</key>
 	<integer>1</integer>
 	<key>pfm_last_modified</key>
-	<date>2024-12-16T19:42:12Z</date>
+	<date>2026-02-16T20:29:12Z</date>
 	<key>pfm_platforms</key>
 	<array>
 		<string>macOS</string>
@@ -150,6 +150,7 @@ During a profile replacement, the system updates payloads with the same 'Payload
 					<string>SendAllTelemetryEnabled</string>
 					<string>StartDaemonOnAppLaunch</string>
 					<string>IgnoreUIOpenAfterInstall</string>
+					<string>DisableOptInNotification</string>
 					<string>UpdateCache</string>
 					<string>UpdateCheckInterval</string>
 					<string>UpdateCheckFrequency</string>
@@ -401,6 +402,24 @@ Writes logs to: /Library/Logs/Microsoft/autoupdate.log</string>
 			<string>IgnoreUIOpenAfterInstall</string>
 			<key>pfm_title</key>
 			<string>Ignore UI Open After Install</string>
+			<key>pfm_type</key>
+			<string>boolean</string>
+		</dict>
+		<dict>
+			<key>pfm_app_min</key>
+			<string>4.70</string>
+			<key>pfm_default</key>
+			<false/>
+			<key>pfm_description</key>
+			<string>When Set to TRUE, prevents Opt-In notification/pop-up window from showing even when HowToCheck is set to Automatic.</string>
+			<key>pfm_description_reference</key>
+			<string>If this entry is missing or set to FALSE, and HowToCheck is set to Automatic, an Opt-In popup window appears. This notification is ignored if the HowToCheck setting isn't Automatic.</string>
+			<key>pfm_documentation_url</key>
+			<string>https://learn.microsoft.com/en-us/microsoft-365-apps/mac/mau-preferences#disableoptinnotification</string>
+			<key>pfm_name</key>
+			<string>DisableOptInNotification</string>
+			<key>pfm_title</key>
+			<string>Disable Opt-In Notification</string>
 			<key>pfm_type</key>
 			<string>boolean</string>
 		</dict>
@@ -2549,6 +2568,6 @@ Writes logs to: /Library/Logs/Microsoft/autoupdate.log</string>
 	<key>pfm_unique</key>
 	<true/>
 	<key>pfm_version</key>
-	<integer>18</integer>
+	<integer>19</integer>
 </dict>
 </plist>
