--- a/Manifests/ManagedPreferencesApplications/com.okta.mobile.plist
+++ b/Manifests/ManagedPreferencesApplications/com.okta.mobile.plist
@@ -65,7 +65,7 @@
 	ChiYvHgSithnzR++s9bEkCFDhgwZMuR8+TcgDLDRAr0H4wAAAABJRU5ErkJggg==
 	</data>
 	<key>pfm_last_modified</key>
-	<date>2025-12-18T22:30:02Z</date>
+	<date>2026-02-20T18:00:00Z</date>
 	<key>pfm_platforms</key>
 	<array>
 		<string>macOS</string>
@@ -174,14 +174,15 @@
 			<key>pfm_name</key>
 			<string>OktaVerify.DeviceHealthOptions</string>
 			<key>pfm_note</key>
-			<string>By default (when no values are set), all device health checks are displayed in Okta Verify on user devices. 
-If the value contains 'Disabled', the Device Health page isn't displayed in Okta Verify</string>
+			<string>By default (when no values are set), all device health checks are displayed in Okta Verify on user devices.
+If the value contains 'Disabled', the Device Health page isn't displayed in Okta Verify.
+Supported values (semicolon-separated): Disabled, HideOSUpdate, HideDiskEncryption, HideBiometrics, HidePassword</string>
 			<key>pfm_title</key>
 			<string>Device Health Options</string>
 			<key>pfm_type</key>
 			<string>string</string>
 			<key>pfm_value_placeholder</key>
-			<string>HideDiskEncryption;HideBiometrics</string>
+			<string>HideOSUpdate;HideDiskEncryption;HideBiometrics;HidePassword</string>
 		</dict>
 		<dict>
 			<key>pfm_default</key>
@@ -319,6 +320,31 @@ If the value contains 'Disabled', the Device Health page isn't displayed in Okta
 			<key>pfm_value_placeholder</key>
 			<string>my-test-domain.oktapreview.com;my-prod-domain.oktapreview.com</string>
 		</dict>
+		<dict>
+			<key>pfm_description</key>
+			<string>Enable Okta Verify to collect trust signals from an EDR client that's running on the same macOS device</string>
+			<key>pfm_documentation_url</key>
+			<string>https://help.okta.com/oie/en-us/content/topics/identity-engine/devices/managed-app-configs-macos.htm#OktaVeri4</string>
+			<key>pfm_name</key>
+			<string>OktaVerify.Plugins</string>
+			<key>pfm_note</key>
+			<string>Specify EDR client bundle identifiers to enable endpoint security integration plugins. See Manage endpoint security integration plugins for macOS.</string>
+			<key>pfm_subkeys</key>
+			<array>
+				<dict>
+					<key>pfm_description</key>
+					<string>The EDR client bundle identifier</string>
+					<key>pfm_type</key>
+					<string>string</string>
+					<key>pfm_value_placeholder</key>
+					<string>com.crowdstrike.zta</string>
+				</dict>
+			</array>
+			<key>pfm_title</key>
+			<string>Plugins</string>
+			<key>pfm_type</key>
+			<string>array</string>
+		</dict>
 	</array>
 	<key>pfm_targets</key>
 	<array>
@@ -329,6 +355,6 @@ If the value contains 'Disabled', the Device Health page isn't displayed in Okta
 	<key>pfm_unique</key>
 	<true/>
 	<key>pfm_version</key>
-	<integer>3</integer>
+	<integer>4</integer>
 </dict>
 </plist>
