--- a/Manifests/ManagedPreferencesApplications/com.okta.mobile.plist
+++ b/Manifests/ManagedPreferencesApplications/com.okta.mobile.plist
@@ -65,7 +65,7 @@
 	ChiYvHgSithnzR++s9bEkCFDhgwZMuR8+TcgDLDRAr0H4wAAAABJRU5ErkJggg==
 	</data>
 	<key>pfm_last_modified</key>
-	<date>2026-02-20T18:00:00Z</date>
+	<date>2026-02-23T19:02:40Z</date>
 	<key>pfm_platforms</key>
 	<array>
 		<string>macOS</string>
@@ -328,16 +328,75 @@ Supported values (semicolon-separated): Disabled, HideOSUpdate, HideDiskEncrypti
 			<key>pfm_name</key>
 			<string>OktaVerify.Plugins</string>
 			<key>pfm_note</key>
-			<string>Specify EDR client bundle identifiers to enable endpoint security integration plugins. See Manage endpoint security integration plugins for macOS.</string>
+			<string>Specify EDR client configurations to enable endpoint security integration plugins. See Manage endpoint security integration plugins for macOS.</string>
 			<key>pfm_subkeys</key>
 			<array>
 				<dict>
-					<key>pfm_description</key>
-					<string>The EDR client bundle identifier</string>
+					<key>pfm_subkeys</key>
+					<array>
+						<dict>
+							<key>pfm_description</key>
+							<string>The EDR client bundle identifier</string>
+							<key>pfm_name</key>
+							<string>name</string>
+							<key>pfm_title</key>
+							<string>Name</string>
+							<key>pfm_type</key>
+							<string>string</string>
+							<key>pfm_value_placeholder</key>
+							<string>com.crowdstrike.zta</string>
+						</dict>
+						<dict>
+							<key>pfm_description</key>
+							<string>Description of the EDR integration</string>
+							<key>pfm_name</key>
+							<string>description</string>
+							<key>pfm_title</key>
+							<string>Description</string>
+							<key>pfm_type</key>
+							<string>string</string>
+							<key>pfm_value_placeholder</key>
+							<string>File-based EDR integration between Okta Verify and the CrowdStrike Falcon agent</string>
+						</dict>
+						<dict>
+							<key>pfm_description</key>
+							<string>The integration type (FILE for file-based integrations)</string>
+							<key>pfm_name</key>
+							<string>type</string>
+							<key>pfm_title</key>
+							<string>Type</string>
+							<key>pfm_type</key>
+							<string>string</string>
+							<key>pfm_value_placeholder</key>
+							<string>FILE</string>
+						</dict>
+						<dict>
+							<key>pfm_description</key>
+							<string>The data format used by the EDR client (e.g., JWT)</string>
+							<key>pfm_name</key>
+							<string>format</string>
+							<key>pfm_title</key>
+							<string>Format</string>
+							<key>pfm_type</key>
+							<string>string</string>
+							<key>pfm_value_placeholder</key>
+							<string>JWT</string>
+						</dict>
+						<dict>
+							<key>pfm_description</key>
+							<string>The file path where the EDR client writes security posture data</string>
+							<key>pfm_name</key>
+							<string>location</string>
+							<key>pfm_title</key>
+							<string>Location</string>
+							<key>pfm_type</key>
+							<string>string</string>
+							<key>pfm_value_placeholder</key>
+							<string>/Library/Application Support/Crowdstrike/ZeroTrustAssessment/data.zta</string>
+						</dict>
+					</array>
 					<key>pfm_type</key>
-					<string>string</string>
-					<key>pfm_value_placeholder</key>
-					<string>com.crowdstrike.zta</string>
+					<string>dictionary</string>
 				</dict>
 			</array>
 			<key>pfm_title</key>
